<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemSort"
        android:icon="@drawable/ic_sort"
        android:title="@string/toolbar_menu_sort"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menuItemSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/toolbar_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menuItemFilter"
        android:icon="@drawable/ic_filter_icon"
        android:title="@string/toolbar_menu_filter"
        app:showAsAction="collapseActionView" />
</menu>